<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homepageFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/homepage" />
    <item
        android:id="@+id/campaignsFragment"
        android:icon="@drawable/ic_nav_campaign"
        android:title="@string/campaigns" />
    <item
        android:checkable="false"
        android:title="Item"
        android:visible="true" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_user"
        android:title="@string/profile" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_nav_cart"
        android:title="@string/cart" />
</menu>