<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="addItemFragment"
            type="com.simgesengun.jellypinapplication.fragment.AddItemFragment" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:theme="@style/DialogTheme_transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_popup"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textViewAddItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_item"
                android:textAppearance="@style/Text.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/item_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAddItem">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDescription"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/item_description"
                app:layout_constraintEnd_toEndOf="@id/textInputLayoutName"
                app:layout_constraintStart_toStartOf="@+id/textInputLayoutName"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPrice"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/item_price"
                app:layout_constraintEnd_toEndOf="@id/textInputLayoutName"
                app:layout_constraintStart_toStartOf="@+id/textInputLayoutName"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage|number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPictureUrl"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/item_picture_url"
                app:layout_constraintEnd_toEndOf="@id/textInputLayoutName"
                app:layout_constraintStart_toStartOf="@+id/textInputLayoutName"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPrice">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPictureUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_popup"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{() -> addItemFragment.buttonAdd(editTextName.getText().toString(), editTextPrice.getText().toString(), editTextDescription.getText().toString(), editTextPictureUrl.getText().toString())}"
                android:text="@string/add_item"
                app:backgroundTint="@null"
                android:textAppearance="@style/Text.Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPictureUrl" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>